# ThreadPullTestTask

./: CMakeLists.txt  README.md
PromoBotTest/: CMakeLists.txt  PromoBotTest.cpp  PromoBotTest.h
PromoBotTest/App/: App.cpp  App.h
PromoBotTest/ThreadPull/: DataStructs.h  ThreadPull.cpp  ThreadPull.h
